<resources>
    <string name="app_name">EasyLinkDemo</string>
    <string name="image_description">This is a picture</string>
    <string name="s_mycameras_title">My Cameras</string>
    <string name="s_livedemos_title">Public Cameras</string>
    <string name="s_about_title">About</string>
    <string name="s_addcamera_camlist">Camera List</string>
    <string name="s_adacamera_addcamera">Tap "+" to add camera</string>
    <string name="s_mycamera_add">Add Camera</string>
    <string name="s_mycamera_add_ipc">Add Camera</string>
    <string name="s_mycamera_add_fosbaby">Add Fosbaby</string>
    <string name="s_mycamera_conn_fosbaby">Connect Fosbaby</string>
    <string name="s_picture_title">View capture files</string>
    <string name="s_message_title">Messages</string>
    <string name="s_mycameraipcamera_searching">Scanning &#8230;</string>
    <string name="s_mycameraipcamera_searchfinish">Scanning finish.</string>
    <string name="s_mycameraipcamera_searchtimeout">Scanning timeout.</string>
    <string name="s_sacnqr_title">Scan UID QR code</string>
    <string name="s_mycamera_addipcamera">IP Camera</string>
    <string name="s_mycamera_addfosbaby">FosBaby</string>
    <string name="s_mycamera_addfosbaby_">FosBaby:</string>
    <string name="s_mycamera_addcancel">Cancel</string>
    <string name="s_jumpstep">Skip</string>
    <string name="s_nextstep">Next</string>
    <string name="s_refresh">Fresh</string>
    <string name="s_test">Test</string>
    <string name="s_finish">Finish</string>
    <string name="s_fosbaby_back">Back</string>
    <string name="s_username">Username</string>
    <string name="s_username_admin">Username:admin</string>
    <string name="s_password">Password</string>
    <string name="s_newusername">New Username</string>
    <string name="s_newpassword">New Password</string>
    <string name="s_newpassword2">Confirm New Password</string>
    <string name="s_wether_show_pwd">Show Password</string>
    <string name="s_err_userorpwd">Wrong Username or Password</string>
    <string name="s_err_login_refused">Login failed.</string>
    <string name="s_exceed_max_user">Exceed maximum users of the camera.</string>
    <string name="s_test_wifi_fail">Can not connect to the Wi-Fi of FosBaby, please check the Wi-Fi password of FosBaby Soft AP.</string>
    <string name="s_wifi_conn_set">\n If connection always fail, please connect the Wi-Fi of FosBaby in the system settings of your phone.</string>
    <string name="s_test_wifi_blank">Please set the Wi-Fi network you want to connect.</string>
    <string name="s_testing_wifi">Testing Wi-Fi connection, \n Please wait.</string>
    <string name="s_test_wifi_succ">Congratulations, Wi-Fi connection is available now.</string>
    <string name="s_login_fail">Login failed</string>
    <string name="s_login_timeout">Login timeout</string>
    <string name="s_ip_blank">IP Address can not be empty</string>
    <string name="s_ddns_blank">DDNS can not be empty</string>
    <string name="s_camera_null">No camera</string>
    <string name="s_camera_outline">Camera is offline.</string>
    <string name="s_blank_userorpwd">Username or Password can not be empty.</string>
    <string name="s_ipc_exist">This camera has already been added.</string>
    <string name="s_ip_exist">IP repeat.</string>
    <string name="s_ddns_exist">This DDNS has already in the camera list.</string>
    <string name="s_uid_exist">This UID has already in the camera list.</string>
    <string name="s_err_chg_pwd_fail">Password modification failed.</string>
    <string name="s_err_pwd_diffrent">Two times password should be same.</string>
    <string name="s_err_pwd_reg_err">Passwors is not available,\r\n doesn\'t support these characters:</string>
    <string name="s_err_username_reg_err">Username is not available,\r\n doesn\'t support these characters:</string>
    <string name="s_err_uid_reg_err">UID is not available</string>
    <string name="s_err_fosbaby_wifi_reg_err">Please connect the Wi-Fi network beginning with FosBaby</string>
    <string name="s_err_ip_reg_err">IP address is not available.</string>
    <string name="s_fosbaby_tip">Does your FosBaby already have Wi-Fi connection?</string>
    <string name="s_fosbaby_conn_wifi">Already has Wi-Fi connection</string>
    <string name="s_fosbaby_disconn_wifi">First time using, no Wi-Fi connection</string>
    <string name="s_fosbaby_input_wifi">Please enable the Soft AP feature of FosBaby</string>
    <string name="s_camerasetting_delcamera">Delete this camera</string>
    <string name="s_choose_wifi">Please choose Wi-Fi network</string>
    <string name="s_conn_device">Please connect the camera first</string>
    <string name="s_not_find_sdcard">No SD card</string>
    <string name="s_not_enough_sdsize">Not enough space on SD card.</string>
    <string name="s_not_support_record">Your camera doesn\'t support recording.</string>
    <string name="s_ok">OK</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_not_avilabel_uid">It\'s not the QR code of our camera.</string>
    <string name="s_scan_fail">No Result</string>
    <string name="s_connecting">Connecting &#8230;</string>
    <string name="s_account_changing">Processing, please wait..</string>
    <string name="s_tip">Notice</string>
    <string name="s_blank_username">Please input Username</string>
    <string name="s_qr_tip">1.Put the QR code in the box, the APP will scan automatically;\r\n2.Do not let the other barcode into the box to affect the scanning.</string>
    <string name="s_qr_tip1">Put the QR code in the scanning box and make the barcode outside of the box.</string>
    <string name="s_preset">Preset</string>
    <string name="s_preset_top">TopMost</string>
    <string name="s_preset_bottom">BottomMost</string>
    <string name="s_preset_left">LeftMost</string>
    <string name="s_preset_right">RightMost</string>
    <string name="s_cannot_del_default_preset">Can not delete default preset.</string>
    <string name="s_preset_name">Preset Name</string>
    <string name="s_preset_name_is_exist">This preset name already exist.</string>
    <string name="s_preset_name_err">Wrong format,the name should be less than 20 characters, and support numbers, letters and _ -</string>
    <string name="s_device_name_err">Wrong format,the name should be less than 20 characters, and support numbers, letters and _ -@$*</string>
    <string name="s_cruise">Cruise</string>
    <string name="s_cruise_vertical">Vertical</string>
    <string name="s_cruise_horizontal">Horizontal</string>
    <string name="s_cruise_allsides">Allsides Curise</string>
    <string name="s_cruise_stop">Stop Curise</string>
    <string name="s_picture_count">pictures</string>
    <string name="s_video_count">videos</string>
    <string name="about">About</string>
    <string name="app_setting">App Settings</string>
    <string name="buy_product">Buy products</string>
    <string name="rate_app">Rate it</string>
    <string name="help_feedback">Feedback</string>
    <string name="logout">Logout </string>
    <string name="online_demo">Public Cameras</string>
    <string name="demo1_title">Foscam Headquarters</string>
    <string name="demo2_title">Foscam Garage</string>
    <string name="wifi_connect">Only connect camera under Wi-Fi \r\nconnection</string>
    <string name="open_help_ui">Help</string>
    <string name="enable_msg_push">Enable push message</string>
    <string name="flow_statistics">Mobile Data Traffic</string>
    <string name="share_manager">SNS management</string>
    <string name="commit">Send</string>
    <string name="feedback_prompt">Notice: Please kindly give us your suggestion or feedback, thank you. &#8230;</string>
    <string name="app_type">Foscam Android Version</string>
    <string name="app_lasted_version">Latest Version: v0.2</string>
    <string name="copyright_info">ShenZhen Foscam Intelligent Technology co., Ltd.</string>
    <string name="camera_setting">Camera Settings</string>
    <string name="camera_switch">Camera On/Off</string>
    <string name="basic_info">Basic Status</string>
    <string name="device_info">Camera Status</string>
    <string name="set_basic_info">Connection</string>
    <string name="time_setting">Date Time</string>
    <string name="wifi_setting">Wi-Fi</string>
    <string name="video_quality">Default Video Quality</string>
    <string name="account_setting">User Accounts</string>
    <string name="alarm_setting">Alarm</string>
    <string name="flip_setting">Image Rotation</string>
    <string name="indicator_switch">Led On/Off</string>
    <string name="volume_setting">Speaker Volume</string>
    <string name="night_vision">Night Vision</string>
    <string name="sd_browse">SD Card Recording</string>
    <string name="share_camera">Share the Camera</string>
    <string name="del_camera">Delete the Camera</string>
    <string name="tutorial">Tutorial</string>
    <string name="view_device_info">View Camera Status</string>
    <string name="modify_camera_info">Camera Name</string>
    <string name="modify_p2p_info">P2P UID/DDNS/IP Address</string>
    <string name="modify_port_info">HTTP Port</string>
    <string name="modify_account_password">Camera Username and Password</string>
    <string name="http_port_info">HTTP Port:</string>
    <string name="media_port_info">Media Port:</string>
    <string name="port_88">88</string>
    <string name="port_media_88">88(Only FI9818W,FI9821W,FI9801W,FI9802W need to input Media Port.)</string>
    <string name="modify_camera_account_info">Modify Camera Username and Password</string>
    <string name="modify_camera_time">Modify Camera Date</string>
    <string name="camera_name">Camera Name:</string>
    <string name="camera_name_">Camera Name</string>
    <string name="time_zone">Time Zone:</string>
    <string name="account">Username:</string>
    <string name="password">Password:</string>
    <string name="mj">Standard Definition</string>
    <string name="hd">High Definition</string>
    <string name="roate_180_horizontally">Rotate 180 degree horizontally</string>
    <string name="roate_180_vertical">Rotate 180 degree vertically</string>
    <string name="account_name">Username</string>
    <string name="new_account_name">New Username</string>
    <string name="account_pwd">Password</string>
    <string name="new_account_pwd">New Password</string>
    <string name="pwd_strong">Password Strength</string>
    <string name="confirm_new_pwd">Confirm New Password</string>
    <string name="limit">Authority</string>
    <string name="indicator_lamp">Status LED</string>
    <string name="night_vision_lamp">Night Light</string>
    <string name="all_alarm">All Alarm</string>
    <string name="motion_detection">Motion Detection</string>
    <string name="isMotionDetect">Enable Motion Detection</string>
    <string name="noise_detection">Sound Detection</string>
    <string name="isNoiseDetect">Enable Sound Detection</string>
    <string name="useField">Usage Scenario</string>
    <string name="outDoor">Outdoor</string>
    <string name="inDoor">Indoor</string>
    <string name="zencejiange">Detection Interval</string>
    <string name="time_10s">10s</string>
    <string name="temperature_detection">Temperature Detection</string>
    <string name="isTemperatureDetection">Enable Temperature Detection</string>
    <string name="wendufanwei">Detection Range</string>
    <string name="temperature_60">60℃</string>
    <string name="humidity_detection">Humidity Detection</string>
    <string name="isHumidityDetection">Enable Humidity Detection</string>
    <string name="shidufanwei">Detection Range</string>
    <string name="humidity_60c">60%</string>
    <string name="s_start_audio">Open audio</string>
    <string name="s_start_talk">Open the intercom</string>
    <string name="s_start_record">Start recording</string>
    <string name="s_start_video">Open Video</string>
    <string name="s_capture_picture">Capture Picture</string>
</resources>