<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <RelativeLayout	
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/common_bg" >
        <com.example.testjni.playview.VideoSurfaceView
            android:id="@+id/live_surface_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:orientation="horizontal"
	    android:layout_height="wrap_content">
        <Button 
            android:id="@+id/video_btn"
            android:layout_width="0dp"
            android:text="@string/s_start_video"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/audio_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/s_start_audio"
            android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/talk_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/s_start_talk"
            android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/record_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/s_start_record"
            android:layout_height="wrap_content"/>
        
        <Button 
            android:id="@+id/capture_pic_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/s_capture_picture"
            android:layout_height="wrap_content"/>
	</LinearLayout>

	<View
	    android:layout_width="match_parent"
	    android:layout_height="10dp" />

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:orientation="horizontal"
	    android:layout_height="wrap_content">
     
	  <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <TableRow>

		        <Button
		            android:id="@+id/bt_pre"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="unused" />

		        <Button
		            android:id="@+id/bt_next"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="unused" />
        </TableRow>
        <TableRow>

            <ImageView
                android:id="@+id/jpgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/a_sel_bg_middle" />

        </TableRow>
     </TableLayout>
	</LinearLayout>
	<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
        
        </TableRow>
    </TableLayout>
</LinearLayout>
